# ecodynamic

./: .gitignore  Cargo.toml  Makefile  README.md  a.out  adapt.ipynb  adapt_best.sh  adapt_fast.out  adapt_slow.sh  adapt_sudden.sh  best.ipynb  build.rs  busy.ipynb  cbindgen.toml  compare.ipynb  energy.ipynb  energy16.csv  letterbox.h  matmul  matmul.c  matmul.csv  matmul.i  matmul.ipynb  matmul.sac  matmul.sacbugreport  matmul.sh  matmul2.ipynb  matmul_adapt.sac  matmul_cn127_rust.csv  matmul_cn128_pinned.csv  matmul_cn128_rust.csv  matmul_cn128_rust_pinned.csv  matmul_fpga.csv  matmul_laptop_powersaver.csv  matmul_laptop_powersaver_pinned.csv  matmul_mt.sh  matmul_resize.sh  matmul_rust.csv  matmul_rust.sh  mixed.ipynb  (+11 more)
controller/: Cargo.toml  build.rs
data/: adapt.csv  adapt_best.csv  adapt_fast.csv  adapt_fast.out  adapt_slow.csv  adapt_slow.out  cn126_300.csv  cn127_300.csv  cn128_300.csv  compare.csv  find_best.csv  find_best_cn126.csv  find_best_cn127.csv  matmul.csv  matmul_1000_20.csv  matmul_1000_30.csv  matmul_1000_50.csv  matmul_cn126_500.csv  matmul_cn126_800.csv  matmul_cn126_rust_pinned.csv  matmul_cn127_800.csv  matmul_cn127_rust_pinned.csv  matmul_cn128_1000.csv  oracle.csv  sac_find_best.csv  sac_find_best_matmul.csv  sac_find_best_nbody.csv  sac_find_best_relax.csv
dataold/: matmul_cn126_rust.csv  matmul_cn126_rust_pinned.csv  matmul_cn128.csv  matmul_fpga_rust.csv  matmul_laptop_performance.csv  matmul_rust_pinned.csv
ecodynamic/: Cargo.toml
examples/: adapt_fast.rs  adapt_slow.rs  math2.rs  math_sleepy.rs  matmul.rs  matmul2.rs  matmul_energy.rs  matmul_mt.rs  matmul_resize.rs  matmul_rt.rs  matmul_runtime.rs  overhead.rs  parallel.rs  savings.rs  sleepy.rs
ifl24/: best.ipynb  busy.ipynb  common.py  compare.ipynb  multi.ipynb  oracle.ipynb  sac_best.ipynb  threads.ipynb
letterbox/: Cargo.toml  build.rs
mt-letterbox/: Cargo.toml
mtd/: SACf__MAIN_CL_ST___mtspmdf_1294_main__d_1000_1000__d-2024-10-08-10-24-52.csv  SACf__MAIN_CL_ST___mtspmdf_1296_main__d_1000_1000__d-2024-10-08-10-24-52.csv  SACf__MAIN_CL_ST___mtspmdf_1298_matmul___d_1000_1000__i__i__d_1000_1000__i__i__d_1000_1000__d-2024-10-08-10-24-52.csv
mtdynamic/: Cargo.toml
old/: matmul.ipynb  threads.ipynb
paper/: busy.ipynb  common.py
scripts/: adapt_fast.sh  adapt_slow.sh  compare.sh  find_best.sh  find_best_sac.sh  math.ipynb  math.sh  matmul.csv  matmul.ipynb  matmul.sh  observations.sh  oracle.sh  overhead.sh  runtime.sh  sac_find_best.sh  sac_matmul.sh  (+10 more)
server/: Cargo.toml
server/examples/: client.c  client.rs
server/src/: config.rs  letterbox.rs  lib.rs  main.rs  sample_vec.rs  server.rs  single.rs
server/src/config/: controller_type.rs  score_fn.rs
tune/: Cargo.toml  README.md
tune/src/: adapt_genetic.rs  bench_drift.rs  bench_genetic.rs  bench_stability.rs  curves.rs  lib.rs  montecarlo.rs  test_genetic.rs  tune_genetic.rs
(+161 files in other folders)
