[package]
name = "mtdynamic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[features]
default = ["delta-based"]
delta-based = []
corridor-based = []

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
ctrlc = "3.4.5"
libc = "0.2.168"
