[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
name = "letterbox"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "single"
path = "src/single.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
controller = { path = "../controller" }
