[package]
name = "tune"
version = "0.1.0"
edition = "2024"

[lib]
name = "prelude"
path = "src/lib.rs"

[[bin]]
name = "adapt"
path = "src/adapt_genetic.rs"

[[bin]]
name = "test"
path = "src/test_genetic.rs"

[[bin]]
name = "tune"
path = "src/tune_genetic.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
controller = { path = "../controller" }
env_logger = "0.11.10"
log = "0.4.29"
rand = "0.10.1"
rand_distr = "0.6.0"
